Fix alignment of pasta img, header1, and description

--- a/css/pasta.css
+++ b/css/pasta.css
@@ -4,17 +4,17 @@ body {
 
 .pastaimg {
     border: 4px solid #5FA5D3;
-    width:500px;
-    height: auto;
+    width:480px;
+    height: 350px;
     float: left;
-    margin-left: 5px;
+    margin-left: 40px;
     margin-top: 0px;
 }
 
 
 
 .header1 {
-    margin-left: 530px;
+    margin-left: 560px;
     margin-top: 0px;
     color: #FFFFFF;
     font-family: monospace;
@@ -22,7 +22,7 @@ body {
 }
 
 .desc {
-    margin-left: 530px;
+    margin-left: 560px;
     color: #FFFFFF;
     font-family: monospace;
     vertical-align: middle;
@@ -32,7 +32,7 @@ body {
 }
 
 .goback {
-    margin-left: 30px;
+    margin-left: 50px;
     margin-bottom: 0px;
     font-family: sans-serif;
     font-size: 17px;
